@@ -1,3 +1,11 @@
+2010-04-21  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_jpeg.c: avoid preparing jpeg tables everytime 
+	JPEGSetupEncode() is called if the tables already seem to be 
+	established.  This prevents spurious updates and rewriting of 
+	directories with jpegtables when doing updates to existing images.
+	http://trac.osgeo.org/gdal/ticket/3539
+
 2010-04-20  Olivier Paquet  <olivier.paquet@gmail.com>
 
 	* libtiff/tif_dirinfo.c: Use correct set_field_type for
